modified:   README.html modified:   README.md modified:   bin/pod2md.pl new file:   issuu-dl.md new file:   jpg-to-pdf.md modified:   prebuild.pl

--- a/README.html
+++ b/README.html
@@ -38,7 +38,7 @@ under <strong>downloads</strong>.</p>
 
 <h3>Other Options</h3>
 
-<p>See <a href="issuu-dl.html">issuu-dl</a> SYNOPSIS for options.</p>
+<p>See issuu-dl <a href="issuu-dl.html">html</a>/<a href="issuu-dl.md">md</a> SYNOPSIS for options.</p>
 
 <h3>Downloads Directories and Files</h3>
 
@@ -61,7 +61,7 @@ to a single .pdf file.</p>
 
 <h4>Other Options</h4>
 
-<p>See <a href="jpg-to-pdf.html">jpg-to-pdf</a> SYNOPSIS for options.</p>
+<p>See jpg-to-pdf <a href="jpg-to-pdf.html">html</a>/<a href="jpg-to-pdf.md">md</a> SYNOPSIS for options.</p>
 
 <h2>DEPENDENCIES</h2>
 
