--- a/jpg-to-pdf.html
+++ b/jpg-to-pdf.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>/cygdrive/c/Users/andre_000/Downloads/issuu-pub-dl-git/jpg-to-pdf.pl</title>
+<title>/cygdrive/C/Users/andrewp/Downloads/issuu-pub-dl-git/jpg-to-pdf.pl</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link rev="made" href="mailto:Yaakov@yaakov04.nonet" />
 </head>
@@ -48,7 +48,9 @@
 <pre>
   options:
     --output=[filename.pdf]
-    --density=[integer]</pre>
+    --density=[integer]
+    --convert-limit-memory=[integer MB]
+    --convert-limit-map=[integer MB]</pre>
 <p>
 </p>
 <hr />
