--- a/README.html
+++ b/README.html
@@ -108,6 +108,18 @@ linux-like command-line</p></li>
 <li>tested with Image Magick 6.9.1-2 Q16 x64</li>
 </ul>
 
+<h2>Configuration File</h2>
+
+<p>On its first run, issuu-dl.pl will create a <code>config.yaml</code>
+file in its directory (a copy of config-template.yaml).</p>
+
+<p><code>config.yaml</code> can be modified to change the behaviour of
+issuu-dl.pl and jpg-to-pdf.pl . It contains comments
+describing the config options.</p>
+
+<p>It is in <a href="http://yaml.org/">YAML</a> format, which is a well-known plain text 
+format that is machine-readable.</p>
+
 <h2>URLs</h2>
 
 <p><a href="https://github.com/zgarnog">zgarnog on github</a></p>
